--- a/01/ejercicio1.html
+++ b/01/ejercicio1.html
@@ -11,7 +11,7 @@
   <body>
   	<div>
 
-		<h1>Aprendiendo a utilizar CSS</h1>
+		<h1 >Aprendiendo a utilizar CSS</h1>
 
 		<h2>Introducción a las Hojas de estilos</h2>
 		<p>
@@ -31,6 +31,14 @@
 		<p>
 		At elementum penatibus etiam <strong>justo</strong> semper blandit pretium <a href="">turpis nostra</a>, euismod pharetra congue porttitor fusce ad per vestibulum class, torquent aenean ut <a href="">facilisis</a> eros nec ante sagittis. At iaculis curae aliquam <strong>vitae sem id semper</strong> dictum mus quisque, vivamus pharetra molestie praesent vestibulum nisl interdum congue dictumst penatibus urna, enim magnis porta a auctor non gravida aliquet sollicitudin.
 		</p>
+		<p>
+			<a href="http://jigsaw.w3.org/css-validator/check/referer">
+				<img style="border:0;width:88px;height:31px"
+					src="http://jigsaw.w3.org/css-validator/images/vcss"
+					alt="¡CSS Válido!" />
+			</a>
+		</p>
+				
 	</div>
 	
   </body>
